small fix, line not showing

--- a/TazGraphEngine/CMakeLists.txt
+++ b/TazGraphEngine/CMakeLists.txt
@@ -16,6 +16,7 @@ set(Header_Files
     "GECS/Animators/AnimatorManager.h"
     "GECS/Animators/FlashAnimation.h"
     "GECS/Animators/FlashAnimatorComponent.h"
+    "GECS/Animators/LineAnimators/LineFlashAnimatorComponent.h"
     "GECS/Components/Util/ButtonComponent.h"
     "GECS/Components/Basic/ColliderComponent.h"
     "GECS/Components.h"
@@ -23,6 +24,8 @@ set(Header_Files
     "GECS/GECSManager.h"
     "GECS/Components/Util/GridComponent.h"
     "GECS/Components/Basic/Rectangle_w_Color.h"
+    "GECS/Components/Basic/Line_w_Color.h"
+    "GECS/Components/Basic/Triangle_w_Color.h"
     "GECS/Components/Util/RigidBodyComponent.h"
     "GECS/Components/Basic/SpriteComponent.h"
     "GECS/Components/Basic/TransformComponent.h"
@@ -39,6 +42,7 @@ set(Header_Files
     "ResourceManager/ResourceManager.h"
     "Renderers/FrameBuffer/Framebuffer.h"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.h"
+    "Renderers/PlaneColorRenderer/PlaneColorRenderer.h"
     "TextureManager/TextureManager.h"
     "BaseFPSLimiter/BaseFPSLimiter.h"
     "Vertex.h"
@@ -72,6 +76,7 @@ set(Source_Files
     "ResourceManager/ResourceManager.cpp"
     "Renderers/FrameBuffer/Framebuffer.cpp"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.cpp"
+    "Renderers/PlaneColorRenderer/PlaneColorRenderer.cpp"
     "TextureManager/TextureManager.cpp"
     "BaseFPSLimiter/BaseFPSLimiter.cpp"
     "Window/Window.cpp"
