--- a/TazGraph/TazGraph.vcxproj
+++ b/TazGraph/TazGraph.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Src\App\App.cpp" />
     <ClCompile Include="Src\AssetManager\AssetManager.cpp" />
     <ClCompile Include="Src\Collision\Collision.cpp" />
+    <ClCompile Include="Src\EditorIMGUI\CustomFunctions\CustomFunctions.cpp" />
     <ClCompile Include="Src\EditorIMGUI\EditorIMGUI.cpp" />
     <ClCompile Include="Src\Graph.cpp" />
     <ClCompile Include="Src\main.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Src\App\App.h" />
     <ClInclude Include="Src\AssetManager\AssetManager.h" />
     <ClInclude Include="Src\Collision\Collision.h" />
+    <ClInclude Include="Src\EditorIMGUI\CustomFunctions\CustomFunctions.h" />
     <ClInclude Include="Src\EditorIMGUI\EditorIMGUI.h" />
     <ClInclude Include="Src\GECS\Scripts\MainMenuBackground.h" />
     <ClInclude Include="Src\GECS\ScriptComponents.h" />
