--- a/TazGraph/CMakeLists.txt
+++ b/TazGraph/CMakeLists.txt
@@ -8,6 +8,7 @@ set(Header_Files
     "Src/AssetManager/AssetManager.h"
     "Src/Collision/Collision.h"
     "Src/EditorIMGUI/EditorIMGUI.h"
+    "Src/EditorIMGUI/CustomFunctions/CustomFunctions.h"
     "Src/GECS/ScriptComponents.h"
     "Src/GECS/Scripts/MainMenuBackground.h"
     "Src/Graph.h"
@@ -21,6 +22,7 @@ set(Source_Files
     "Src/AssetManager/AssetManager.cpp"
     "Src/Collision/Collision.cpp"
     "Src/EditorIMGUI/EditorIMGUI.cpp"
+    "Src/EditorIMGUI/CustomFunctions/CustomFunctions.cpp"
     "Src/Graph.cpp"
     "Src/main.cpp"
     "Src/MainMenuScreen/MainMenuScreen.cpp"
