--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -186,10 +186,10 @@
     <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="DataManager\DataManager.h" />
     <ClInclude Include="GECS\Animators\LineAnimators\LineFlashAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Basic\Box_w_Color.h" />
-    <ClInclude Include="GECS\Components\Basic\Line_w_Color.h" />
-    <ClInclude Include="GECS\Components\Basic\Triangle_w_Color.h" />
-    <ClInclude Include="GECS\Components\Util\PollingComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\Box_w_Color.h" />
+    <ClInclude Include="GECS\Components\Link\Basic\Line_w_Color.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\Triangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Node\Util\PollingComponent.h" />
     <ClInclude Include="GECS\UtilComponents.h" />
     <ClInclude Include="GECS\GECSEntityTypes.h" />
     <ClInclude Include="JsonParser\JsonParser.h" />
@@ -200,20 +200,20 @@
     <ClInclude Include="GECS\Animators\AnimatorManager.h" />
     <ClInclude Include="GECS\Animators\MovingAnimation.h" />
     <ClInclude Include="GECS\Animators\MovingAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Util\ButtonComponent.h" />
-    <ClInclude Include="GECS\Components\Basic\ColliderComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Util\ButtonComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\ColliderComponent.h" />
     <ClInclude Include="GECS\Components.h" />
-    <ClInclude Include="GECS\Components\Util\KeyboardControllerComponent.h" />
-    <ClInclude Include="GECS\Components\Util\UILabel.h" />
+    <ClInclude Include="GECS\Components\Node\Util\KeyboardControllerComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Util\UILabel.h" />
     <ClInclude Include="GECS\GECS.h" />
     <ClInclude Include="GECS\GECSManager.h" />
     <ClInclude Include="GECS\Animators\FlashAnimation.h" />
     <ClInclude Include="GECS\Animators\FlashAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Util\GridComponent.h" />
-    <ClInclude Include="GECS\Components\Basic\Rectangle_w_Color.h" />
-    <ClInclude Include="GECS\Components\Util\RigidBodyComponent.h" />
-    <ClInclude Include="GECS\Components\Basic\SpriteComponent.h" />
-    <ClInclude Include="GECS\Components\Basic\TransformComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Util\GridComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\Rectangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Node\Util\RigidBodyComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\SpriteComponent.h" />
+    <ClInclude Include="GECS\Components\Node\Basic\TransformComponent.h" />
     <ClInclude Include="GraphScreen\IScene.h" />
     <ClInclude Include="GraphScreen\AppInterface.h" />
     <ClInclude Include="GraphScreen\SceneList.h" />
