--- a/TazGraph/CMakeLists.txt
+++ b/TazGraph/CMakeLists.txt
@@ -35,6 +35,8 @@ set(ALL_FILES
     ${Source_Files}
 )
 
+add_compile_options(-pedantic)
+
 ################################################################################
 # Setting libs with find_package
 ################################################################################
