--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -115,6 +115,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>
       </AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,10 +149,10 @@
   <ItemGroup>
     <ClCompile Include="AudioEngine\AudioEngine.cpp" />
     <ClCompile Include="Camera2.5D\OrthoCamera.h" />
-    <ClCompile Include="GECS\GECSManager.cpp" />
+    <ClCompile Include="GECS\Core\GECSManager.cpp" />
     <ClCompile Include="Renderers\FrameBuffer\Framebuffer.cpp" />
     <ClCompile Include="Renderers\LineRenderer\LineRenderer.cpp" />
-    <ClCompile Include="GECS\GECS.cpp" />
+    <ClCompile Include="GECS\Core\GECS.cpp" />
     <ClCompile Include="GraphScreen\IScene.cpp" />
     <ClCompile Include="GraphScreen\AppInterface.cpp" />
     <ClCompile Include="GraphScreen\ScreenIndices.h" />
@@ -186,12 +187,14 @@
     <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="DataManager\DataManager.h" />
     <ClInclude Include="GECS\Animators\LineAnimators\LineFlashAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\Box_w_Color.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\Box_w_Color.h" />
     <ClInclude Include="GECS\Components\Link\Basic\Line_w_Color.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\Triangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\Triangle_w_Color.h" />
     <ClInclude Include="GECS\Components\Node\Util\PollingComponent.h" />
+    <ClInclude Include="GECS\Core\CellEntity.h" />
+    <ClInclude Include="GECS\Core\GECSEntity.h" />
     <ClInclude Include="GECS\UtilComponents.h" />
-    <ClInclude Include="GECS\GECSEntityTypes.h" />
+    <ClInclude Include="GECS\Core\GECSEntityTypes.h" />
     <ClInclude Include="JsonParser\JsonParser.h" />
     <ClInclude Include="Renderers\FrameBuffer\Framebuffer.h" />
     <ClInclude Include="Renderers\LineRenderer\LineRenderer.h" />
@@ -200,20 +203,20 @@
     <ClInclude Include="GECS\Animators\AnimatorManager.h" />
     <ClInclude Include="GECS\Animators\MovingAnimation.h" />
     <ClInclude Include="GECS\Animators\MovingAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Util\ButtonComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\ColliderComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Util\ButtonComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\ColliderComponent.h" />
     <ClInclude Include="GECS\Components.h" />
-    <ClInclude Include="GECS\Components\Node\Util\KeyboardControllerComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Util\UILabel.h" />
-    <ClInclude Include="GECS\GECS.h" />
-    <ClInclude Include="GECS\GECSManager.h" />
+    <ClInclude Include="GECS\Components\Empty\Util\KeyboardControllerComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Util\UILabel.h" />
+    <ClInclude Include="GECS\Core\GECS.h" />
+    <ClInclude Include="GECS\Core\GECSManager.h" />
     <ClInclude Include="GECS\Animators\FlashAnimation.h" />
     <ClInclude Include="GECS\Animators\FlashAnimatorComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Util\GridComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\Rectangle_w_Color.h" />
-    <ClInclude Include="GECS\Components\Node\Util\RigidBodyComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\SpriteComponent.h" />
-    <ClInclude Include="GECS\Components\Node\Basic\TransformComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Util\GridComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\Rectangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Empty\Util\RigidBodyComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\SpriteComponent.h" />
+    <ClInclude Include="GECS\Components\Empty\Basic\TransformComponent.h" />
     <ClInclude Include="GraphScreen\IScene.h" />
     <ClInclude Include="GraphScreen\AppInterface.h" />
     <ClInclude Include="GraphScreen\SceneList.h" />
