--- a/TazGraphEngine/CMakeLists.txt
+++ b/TazGraphEngine/CMakeLists.txt
@@ -17,18 +17,21 @@ set(Header_Files
     "GECS/Animators/FlashAnimation.h"
     "GECS/Animators/FlashAnimatorComponent.h"
     "GECS/Animators/LineAnimators/LineFlashAnimatorComponent.h"
-    "GECS/Components/Util/ButtonComponent.h"
-    "GECS/Components/Basic/ColliderComponent.h"
+    "GECS/Components/Empty/Util/ButtonComponent.h"
+    "GECS/Components/Empty/Basic/ColliderComponent.h"
     "GECS/Components.h"
-    "GECS/GECS.h"
-    "GECS/GECSManager.h"
-    "GECS/Components/Util/GridComponent.h"
-    "GECS/Components/Basic/Rectangle_w_Color.h"
-    "GECS/Components/Basic/Line_w_Color.h"
-    "GECS/Components/Basic/Triangle_w_Color.h"
-    "GECS/Components/Util/RigidBodyComponent.h"
-    "GECS/Components/Basic/SpriteComponent.h"
-    "GECS/Components/Basic/TransformComponent.h"
+    "GECS/Core/GECS.h"
+    "GECS/Core/GECSManager.h"
+    "GECS/Core/CellEntity.h"
+    "GECS/Core/GECSEntity.h"
+    "GECS/Core/GECSEntityTypes.h"
+    "GECS/Components/Empty/Util/GridComponent.h"
+    "GECS/Components/Empty/Basic/Rectangle_w_Color.h"
+    "GECS/Components/Link/Basic/Line_w_Color.h"
+    "GECS/Components/Empty/Basic/Triangle_w_Color.h"
+    "GECS/Components/Empty/Util/RigidBodyComponent.h"
+    "GECS/Components/Empty/Basic/SpriteComponent.h"
+    "GECS/Components/Empty/Basic/TransformComponent.h"
     "GLSLProgram.h"
     "GLTexture.h"
     "GraphScreen/IScene.h"
@@ -54,8 +57,8 @@ set(Source_Files
     "AudioEngine/AudioEngine.cpp"
     "Camera2.5D/OrthoCamera.h"
     "Renderers/LineRenderer/LineRenderer.cpp"
-    "GECS/GECS.cpp"
-    "GECS/GECSManager.cpp"
+    "GECS/Core/GECS.cpp"
+    "GECS/Core/GECSManager.cpp"
     "GraphScreen/IScene.cpp"
     "GraphScreen/AppInterface.cpp"
     "GraphScreen/ScreenIndices.h"
