initilize dynamic add/remove of components

--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -68,6 +68,18 @@ Pos=644,46
 Size=626,54
 
 [Window][Display Entity Statistics]
-Pos=1030,620
+Pos=951,587
 Size=364,215
+
+[Window][Node]
+Pos=1020,610
+Size=207,165
+
+[Window][Node Display]
+Pos=1039,328
+Size=375,333
+
+[Window][Link Display]
+Pos=903,452
+Size=268,234
 
