--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -76,10 +76,14 @@ Pos=1020,610
 Size=207,165
 
 [Window][Node Display]
-Pos=1093,619
-Size=298,328
+Pos=717,520
+Size=523,593
 
 [Window][Link Display]
-Pos=1170,467
+Pos=756,548
 Size=273,503
+
+[Window][Scene Manager]
+Pos=1345,597
+Size=329,252
 
