init gui features

--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -12,8 +12,8 @@ Pos=16,48
 Size=300,498
 
 [Window][Performance]
-Pos=7,550
-Size=299,521
+Pos=448,480
+Size=319,232
 
 [Window][Control Window]
 Pos=860,408
@@ -40,8 +40,8 @@ Pos=1688,8
 Size=218,1011
 
 [Window][Viewport]
-Pos=618,8
-Size=910,1004
+Pos=471,226
+Size=1004,627
 
 [Window][DockSpace Demo]
 Pos=370,85
@@ -76,7 +76,7 @@ Pos=1020,610
 Size=207,165
 
 [Window][Node Display]
-Pos=717,520
+Pos=1089,621
 Size=523,593
 
 [Window][Link Display]
@@ -86,4 +86,16 @@ Size=273,503
 [Window][Scene Manager]
 Pos=1345,597
 Size=329,252
+
+[Window][Content Browser]
+Pos=390,624
+Size=1140,387
+
+[Window][Script Results]
+Pos=770,174
+Size=575,478
+
+[Window][Script Results Test]
+Pos=10,10
+Size=400,200
 
