--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,4 @@ build/
 *.tmp
 *.temp
 
-/MujinGame/MujinGame/assets/Maps/RandomBackground.csv
-/MujinGame/MujinGame/assets/Maps/RandomMap.csv
-/MujinGame/MujinGame/imgui.ini
+/TazGame/imgui.ini
