init dynamic initialization graph

--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -84,7 +84,7 @@ Pos=589,261
 Size=273,503
 
 [Window][Scene Manager]
-Pos=1091,697
+Pos=608,408
 Size=329,252
 
 [Window][Content Browser]
@@ -98,4 +98,8 @@ Size=575,539
 [Window][Script Results Test]
 Pos=10,10
 Size=400,200
+
+[Window][New Map...]
+Pos=760,458
+Size=400,100
 
