--- a/TazGraphEngine/TazGraphEngine.vcxproj.filters
+++ b/TazGraphEngine/TazGraphEngine.vcxproj.filters
@@ -290,7 +290,7 @@
     <ClInclude Include="Renderers\LightRenderer\LightRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GECS\Components\Empty\Basic\CircleComponent.h">
+    <ClInclude Include="GECS\Components\Empty\Basic\SphereComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
