--- a/TazGraphEngine/CMakeLists.txt
+++ b/TazGraphEngine/CMakeLists.txt
@@ -28,6 +28,8 @@ set(Header_Files
     "GECS/Core/GECSEntityTypes.h"
     "GECS/Components/Empty/Util/GridComponent.h"
     "GECS/Components/Empty/Basic/Rectangle_w_Color.h"
+    "GECS/Components/Empty/Basic/BoxColor.h"
+    "GECS/Components/Empty/Basic/SphereColor.h"
     "GECS/Components/Link/Basic/Line_w_Color.h"
     "GECS/Components/Empty/Basic/Triangle_w_Color.h"
     "GECS/Components/Empty/Util/RigidBodyComponent.h"
@@ -47,6 +49,7 @@ set(Header_Files
     "Renderers/FrameBuffer/Framebuffer.h"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.h"
     "Renderers/PlaneColorRenderer/PlaneColorRenderer.h"
+    "Renderers/LightRenderer/LightRenderer.h"
     "TextureManager/TextureManager.h"
     "BaseFPSLimiter/BaseFPSLimiter.h"
     "Vertex.h"
@@ -82,6 +85,7 @@ set(Source_Files
     "Renderers/FrameBuffer/Framebuffer.cpp"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.cpp"
     "Renderers/PlaneColorRenderer/PlaneColorRenderer.cpp"
+    "Renderers/LightRenderer/LightRenderer.cpp"
     "TextureManager/TextureManager.cpp"
     "BaseFPSLimiter/BaseFPSLimiter.cpp"
     "Window/Window.cpp"
