--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendors/implot"]
 	path = vendors/implot
 	url = https://github.com/epezent/implot
+[submodule "vendors/glm"]
+	path = vendors/glm
+	url = https://github.com/icaven/glm
