--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendors/glm"]
 	path = vendors/glm
 	url = https://github.com/icaven/glm
+[submodule "vendors/ImGuizmo"]
+	path = vendors/ImGuizmo
+	url = https://github.com/CedricGuillemet/ImGuizmo
